refactor(ai): 优化AI助手组件代码结构
- 移除未使用的MAX_STREAMING_BUFFER_CHARS常量
- 将ArrayList的remove(0)替换为更高效的removeFirst()方法
- 简化containsAny方法中的空值检查逻辑
- 合并几何类型判断的条件表达式
- 重构输出端口验证逻辑，提高代码可读性
- 移除未使用的ImGuiWindowFlags导入